Fixing a small bug with css layer z-index position

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -150,7 +150,7 @@ p
 	min-width  1050px
 	position  fixed
 	width  100%
-	z-index  1
+	z-index  11
 	top  0px
 	&:after
 		content ""
@@ -305,7 +305,7 @@ fieldset
 			margin-left 20px
 			margin-right 20px
 			position fixed
-			z-index 3
+			z-index 10
 			width 620px
 			margin-top 53px
 			right 0px
@@ -345,7 +345,7 @@ fieldset
 	position absolute
 	left 50px
 	top 100px
-	z-index 4
+	z-index 12
 	width 340px
 	/* Fix display block of select2 javascript plugin */
 	.select2-container
